# vesc-ble-can

./: .gitignore  LICENSE  README.md  ble_list.py  cmd.qml  pyproject.toml  sample_app.py  test_cmd.lbm  test_cmdrpm.lbm
examples/: legacy_main.py
integrations/: README.md
integrations/qml/: custom_cmd_panel.qml
integrations/vesc_lisp/: custom_cmd_listener.lisp
src/vesc_ble_can/: __init__.py  ble_helper.py  ble_io.py  cli.py  client.py  config.py  main.py  vesc_crc.py  vesc_decode.py  vesc_packet.py
src/vesc_ble_can.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
